--- a/src/modules/_shared/components/molecules/CatalogList/CatalogList.module.scss
+++ b/src/modules/_shared/components/molecules/CatalogList/CatalogList.module.scss
@@ -5,4 +5,5 @@
   row-gap: 40px;
   grid-template-columns: repeat(auto-fit, minmax(228px, 1fr));
   @include content-padding-in-line();
+  margin-top: 24px;
 }
