--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   box-shadow: 0px 1px 0px 0px $color-element;
   height: 48px;
+  z-index: 10;
 
   @include on-desktop {
     height: 64px;
