--- a/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
+++ b/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
@@ -31,17 +31,13 @@
   text-decoration: none;
   color: inherit;
   cursor: pointer;
+  gap: 24px;
 
   &ImageWrapper {
     width: 100%;
     aspect-ratio: 1 / 1;
     position: relative;
     overflow: hidden;
-    margin-bottom: 24px;
-
-    &:hover .categoryImage {
-      transform: scale(1.1);
-    }
   }
 
   &Image {
@@ -61,7 +57,6 @@
   }
 
   &Count {
-    margin-bottom: 32px;
     color: $color-text-secondary;
   }
 
