--- a/src/modules/HomePage/components/Banner/Banner.module.scss
+++ b/src/modules/HomePage/components/Banner/Banner.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  max-width: 100%;
   text-align: center;
   background-color: #000;
 
@@ -11,7 +12,6 @@
     flex-direction: row;
     text-align: left;
   }
-
   &Content {
     width: 100%;
     display: flex;
@@ -20,7 +20,7 @@
     @include on-tablet {
       margin: 15px;
       padding-left: 30px;
-      padding-top: 30px;
+      padding-top: 25px;
       background-color: $color-icon;
       border-radius: 15px;
     }
@@ -44,12 +44,16 @@
       margin-bottom: 0;
       align-self: flex-start;
     }
+    @include on-tablet {
+      margin-top: 0;
+      margin-bottom: 0;
+      align-self: flex-start;
+    }
 
     @include on-desktop {
       font-size: 32px;
     }
   }
-
   &Emoji {
     display: none;
     color: yellow;
@@ -69,32 +73,27 @@
       flex-direction: column;
       flex-grow: 1;
       justify-content: space-between;
-      padding-bottom: 20px;
-    }
-
-    @include on-desktop {
-      padding-bottom: 40px;
+      padding-bottom: 30px;
     }
   }
 
   &Text {
-    color: #a9a9ad;
+    color: #bfbfc9;
   }
 
   &Button {
     padding: 15px 15px;
-    width: 170px;
+    width: 150px;
     background-color: inherit;
+    border: none;
     border-radius: 50px;
     border: 1px solid $color-text-secondary;
-    color: #fff;
+    color: $color-text-main;
     cursor: pointer;
     transition: background-color 0.3s;
     text-transform: uppercase;
 
-    &:hover {
-      background-color: $color-accent;
-    }
+    @include img-hover-scale;
   }
 
   &ImageWrapper {
@@ -102,7 +101,17 @@
       margin-top: 0;
     }
   }
+  &ImageWrapper {
+    @include on-tablet {
+      margin-top: 0;
+    }
+  }
 
+  &Image {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
   &Image {
     max-width: 100%;
     height: auto;
