--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,21 +1,43 @@
-// Base
-$color-bg: #0f1121;
-$color-surface: #161827;
-$color-card: #323542;
 
-// Text
-$color-text-main: #f1f2f9;
-$color-text-secondary: #75767f;
+  // Base
+  $color-bg: #0f1121;
+  $color-surface: #161827;
+  $color-card: #323542;
 
-// UI
-$color-icon: #4a4d58;
-$color-element: #3b3e4a;
+  // Text
+  $color-text-main: #f1f2f9;
+  $color-text-secondary: #75767f;
 
-// Accents
-$color-accent: #905bff;
-$color-success: #27ae60;
-$color-error: #eb5757;
+  // UI
+  $color-icon: #4a4d58;
+  $color-element: #3b3e4a;
 
-// Breakpoints
-$breakpoint-desktop: 1200px;
-$breakpoint-tablet: 640px;
+  // Accents
+  $color-accent: #905bff;
+  $color-success: #27ae60;
+  $color-error: #eb5757;
+
+  // Breakpoints
+  $breakpoint-desktop: 1200px;
+  $breakpoint-tablet: 640px;
+
+
+// // Theme Dark
+// [data-theme='dark'] {
+//   --color-bg: $color-bg;
+//   --color-surface: $color-surface;
+//   --color-card: $color-card;
+
+//   --color-text-main: $color-text-main;
+//   --color-text-secondary: $color-text-secondary;
+
+//   --color-icon: $color-icon;
+//   --color-element: $color-element;
+
+//   --color-accent: $color-accent;
+//   --color-success: $color-success;
+//   --color-error: $color-error;
+
+//   --breakpoint-desktop: $breakpoint-desktop;
+//   --breakpoint-tablet: $breakpoint-tablet;
+// }
