--- a/src/modules/_shared/components/organisms/Slider/Slider.module.scss
+++ b/src/modules/_shared/components/organisms/Slider/Slider.module.scss
@@ -1,10 +1,10 @@
 @use '../../../../../App.scss' as *;
 
 .customSlider {
-  display: flex;
+  @include grid-layout;
+  @include content-padding-in-line();
   justify-content: center;
   padding: 40px 0;
-  position: relative;
 }
 
 .customSliderSwiper {
@@ -12,10 +12,8 @@
   aspect-ratio: 1 / 1;
 
   @include on-tablet {
-    width: 490px;
+
     height: 189px;
-    margin-left: 16px;
-    margin-right: 16px;
   }
 
   @include on-desktop {
@@ -25,17 +23,21 @@
 }
 
 .customSliderImage {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
 }
 
 .sliderControlsWrapper {
-  @media (max-width: 639px) {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    aspect-ratio: 1 / 1;
+  grid-column: 1 / -1;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include on-tablet {
+  grid-column: 2 / -2;
+  aspect-ratio: 0;
   }
 }
 
@@ -65,11 +67,12 @@
 }
 
 .arrowButtonWrapper {
-  @media (max-width: 639px) {
+  @media (max-width: $breakpoint-tablet) {
     display: none;
   }
 
   @include on-tablet {
+    justify-content: space-between;
     height: 189px;
     width: 32px;
   }
