--- a/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
+++ b/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
@@ -7,13 +7,15 @@
   border-radius: 50%;
   padding: 2px;
   cursor: pointer;
+  box-sizing: border-box;
 
   &:hover {
     border-color: $color-text-secondary;
   }
 
-  &Active {
+  &:disabled {
     border-color: $color-text-main;
+    cursor: default;
   }
 
   &Link {
