--- a/src/modules/FavoritesProductsPage/FavoritePage.module.scss
+++ b/src/modules/FavoritesProductsPage/FavoritePage.module.scss
@@ -2,6 +2,7 @@
 
 .favouritePage {
   @include content-padding-in-line();
+  @include grid-layout;
   margin-top: 24px;
   margin-bottom: 56px;
 
@@ -14,10 +15,11 @@
   }
 
   &Quantity {
-    margin-bottom: 32px;
+    margin-bottom: 16px;
+    grid-column: 1/-1;
 
     @include on-tablet {
-      margin-bottom: 40px;
+      margin-bottom: 24px;
     }
 
     &Title {
@@ -29,7 +31,12 @@
     }
   }
 
+  &List {
+    grid-column: 1/-1;
+  }
+
   &Empty {
+    grid-column: 1/ -1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,15 +61,19 @@
   }
 }
 
+.breadcrumbsContainer {
+  grid-column: 1/-1;
+  margin-bottom: 8px;
+
+  @include on-tablet {
+    margin-bottom: 24px;
+  }
+}
+
 .breadcrumbs {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 24px;
-
-  @include on-tablet {
-    margin-bottom: 40px;
-  }
 
   &Separator {
     rotate: 180deg;
