--- a/src/modules/HomePage/components/Banner/Banner.module.scss
+++ b/src/modules/HomePage/components/Banner/Banner.module.scss
@@ -110,13 +110,8 @@
   }
 
   &Image {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
-    object-fit: cover;
-  }
-  &Image {
-    max-width: 100%;
-    height: auto;
     object-fit: cover;
   }
 }
