--- a/src/modules/HomePage/components/Banner/Banner.module.scss
+++ b/src/modules/HomePage/components/Banner/Banner.module.scss
@@ -1,21 +1,52 @@
 @import './../../../../App.scss';
 
 .banner {
+  position: relative;
+  height: 432px;
+  overflow: hidden;
+  color: white;
   display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  max-width: 100%;
-  text-align: center;
-  background-color: #000;
+  align-items: center;
+  justify-content: center;
 
   @include on-tablet {
     flex-direction: row;
     text-align: left;
   }
-  &Content {
+
+  &Image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+
+  &Overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    // justify-content: center;
+  }
+
+  &Content {
+    position: relative;
+    z-index: 2;
+    padding: 20px;
+    max-width: 1200px;
+    max-height: 80%;
+    width: 40%;
+    text-align: left;
     display: flex;
     flex-direction: column;
+    // align-items: center;
 
     @include on-tablet {
       margin: 15px;
@@ -97,7 +128,11 @@
   }
 
   &ImageWrapper {
+    flex: 1 1;
+    height: 100%;
+    width: 100%;
     position: relative;
+    overflow: hidden;
 
     @include on-tablet {
       margin-top: 0;
@@ -111,7 +146,12 @@
 
   &Image {
     width: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+    object-position: center;
   }
 }
