--- a/src/modules/_shared/components/organisms/Slider/Slider.module.scss
+++ b/src/modules/_shared/components/organisms/Slider/Slider.module.scss
@@ -12,6 +12,8 @@
   flex-direction: row;
   align-items: stretch;
   width: 100%;
+  max-height: 432px;
+  height: 100%;
   gap: 16px;
   margin-bottom: 8px;
 }
@@ -20,32 +22,17 @@
   flex-grow: 1;
   flex-shrink: 1;
   aspect-ratio: 1 / 1;
+  max-height: 432px;
   height: 100%;
-  max-height: 320px;
 
   @include on-tablet {
-    max-height: 189px;
+    max-height: 221px;
     aspect-ratio: auto;
   }
 
-  @include on-desktop {
-    max-height: 400px;
-  }
-}
-
-.customSliderImage {
-  display: block;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-
-  @include on-tablet {
-    max-height: 189px;
-  }
-
-  @include on-desktop {
-    max-height: 430px;
-  }
+  // @include on-desktop {
+  //   max-height: 400px;
+  // }
 }
 
 .customPagination {
@@ -82,4 +69,8 @@
     flex-shrink: 0;
     width: 32px;
   }
+}
+
+:global(.swiper-slide) {
+  height: 100%;
 }
