--- a/src/modules/_shared/components/organisms/Slider/Slider.module.scss
+++ b/src/modules/_shared/components/organisms/Slider/Slider.module.scss
@@ -22,7 +22,6 @@
   flex-grow: 1;
   flex-shrink: 1;
   aspect-ratio: 1 / 1;
-  max-height: 432px;
   height: 100%;
 
   @include on-tablet {
@@ -30,9 +29,9 @@
     aspect-ratio: auto;
   }
 
-  // @include on-desktop {
-  //   max-height: 400px;
-  // }
+  @include on-desktop {
+    max-height: 432px;
+  }
 }
 
 .customPagination {
