--- a/src/modules/ProductCatalogPage/CatalogPage.module.scss
+++ b/src/modules/ProductCatalogPage/CatalogPage.module.scss
@@ -35,20 +35,20 @@
     display: flex;
     gap: 16px;
     margin-bottom: 8px;
+    grid-column: 1/-1;
 
     &By {
       display: flex;
       flex-direction: column;
       gap: 4px;
-      min-width: 136px;
+      width: 100%;
+      min-width: 128px;
+      max-width: 136px;
 
       &Text {
         color: $color-text-secondary;
       }
 
-      &Button {
-        height: 40px;
-      }
     }
   }
 
@@ -59,10 +59,6 @@
     width: 248px;
     margin-top: 8px;
   }
-}
-
-.catalogPageContainerSort {
-  grid-column: 1/-1;
 }
 
 .switchButtons {
