--- a/src/modules/_shared/components/atoms/Dropdown/Dropdown.module.scss
+++ b/src/modules/_shared/components/atoms/Dropdown/Dropdown.module.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  width: 128px;
+  width: 100%;
   height: 40px;
   padding: 12px;
   background-color: $color-card;
@@ -12,7 +12,7 @@
   cursor: pointer;
 
   &Big {
-    width: 176px;
+    // max-width: 176px;
   }
 
   &:hover {
