--- a/src/modules/ProductCatalogPage/CatalogPage.module.scss
+++ b/src/modules/ProductCatalogPage/CatalogPage.module.scss
@@ -2,9 +2,9 @@
 
 .catalogPage {
   @include content-padding-in-line();
+  @include grid-layout;
   margin-top: 24px;
   margin-bottom: 64px;
-  @include grid-layout;
 
   @include on-desktop {
     margin-bottom: 80px;
@@ -19,7 +19,7 @@
     grid-column: 1/-1;
 
     @include on-tablet {
-      margin-bottom: 40px;
+      margin-bottom: 24px;
     }
 
     &Title {
@@ -51,33 +51,41 @@
     }
   }
 
-  &Buttons {
-    display: flex;
-    gap: 8px;
-    height: 32px;
-    width: 248px;
+  .isWide {
+    max-width: 187px;
+  }
+
+  &Switch {
     margin-top: 8px;
+    grid-column: 1/-1;
+    justify-self: center;
+
+    &Buttons {
+      display: flex;
+      gap: 16px;
+      height: 32px;
+
+      &Page {
+        display: flex;
+        gap: 8px;
+      }
+    }
   }
 }
 
-.switchButtons {
-  grid-column: 1/-1;
-  justify-self: center;
-}
-
 .breadcrumbsContainer {
-  grid-column: 1/3;
+  grid-column: 1/-1;
+  margin-bottom: 8px;
+
+  @include on-tablet {
+    margin-bottom: 24px;
+  }
 }
 
 .breadcrumbs {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 8px;
-
-  @include on-tablet {
-    margin-bottom: 40px;
-  }
 
   &Separator {
     rotate: 180deg;
