--- a/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
+++ b/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
@@ -1,12 +1,12 @@
 @use '../../../../App.scss' as *;
 
 .shopByCategory {
-  @include grid-layout;
   row-gap: 24px;
 
   &Title {
     grid-column: 1 / -1;
     text-align: left;
+    margin-bottom: 24px;
   }
 
   &Container {
