--- a/src/modules/_shared/components/molecules/ProductCard/ProductCard.module.scss
+++ b/src/modules/_shared/components/molecules/ProductCard/ProductCard.module.scss
@@ -38,6 +38,10 @@
 
   &Title {
     padding-top: 16px;
+    color: $color-text-secondary;
+    &:hover {
+      color: $color-text-main;
+    }
   }
 
   &Prices {
