fix: cartItemLink, pull errors

--- a/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
+++ b/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
@@ -42,6 +42,13 @@
         gap: 24px;
       }
     }
+
+    &Title {
+      color: $color-text-main;
+      &:hover {
+        color:$color-text-secondary ;
+      }
+    }
   }
 
   &BlockControl {
