--- a/src/modules/NotFoundPage/NotFoundPage.module.scss
+++ b/src/modules/NotFoundPage/NotFoundPage.module.scss
@@ -16,20 +16,32 @@
 .title {
   position: absolute;
   top: 80px;
-  left: 100px;
+
   text-align: center;
+
+  @include on-tablet {
+    left: 100px;
+  }
 }
 
 .backButton {
   position: absolute;
-  top: 230px;
-  left: 120px;
-  padding: 20px 200px;
-  font-size: 24px;
+  align-self: center;
+  top: 210px;
+  // left: 120px;
+  padding: 15px 100px;
+  font-size: 16px;
   font-weight: bold;
   background-color: $color-accent;
   color: $color-text-main;
   border: none;
 
   @include img-hover-scale;
+
+  @include on-tablet {
+    top: 210px;
+    left: 120px;
+    padding: 25px 200px;
+    font-size: 16px;
+  }
 }
