add favicon and margin for product slider in detail page

--- a/src/modules/ProductDetailsPage/Recomendation/Recomendation.module.scss
+++ b/src/modules/ProductDetailsPage/Recomendation/Recomendation.module.scss
@@ -2,4 +2,13 @@
 
 .recomendation {
   grid-column: 1 / -1;
+  margin-right: -16px;
+
+  @include on-tablet {
+    margin-right: -24px;
+  }
+
+  @include on-desktop {
+    margin-right: 0;
+  }
 }
