--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,18 +3,30 @@ $color-bg: #0f1121;
 $color-surface: #161827;
 $color-card: #323542;
 
+// $color-bg-light: #e2e6e9;
+// $color-surface-light: #ffffff;
+// $color-card-light: #89939a;
+
 // Text
 $color-text-main: #f1f2f9;
 $color-text-secondary: #75767f;
+
+// $color-text-main-light: #0f0f11;
+// $color-text-secondary-light: #3b3e4a;
 
 // UI
 $color-icon: #4a4d58;
 $color-element: #3b3e4a;
 
+// $color-icon-light: #89939a;
+// $color-element-light: #fafbfc;
+
 // Accents
 $color-accent: #905bff;
 $color-success: #27ae60;
 $color-error: #eb5757;
+
+// $color-accent-light: #4219d0;
 
 // Breakpoints
 $breakpoint-desktop: 1200px;
@@ -39,3 +51,24 @@ $breakpoint-tablet: 640px;
 //   --breakpoint-desktop: $breakpoint-desktop;
 //   --breakpoint-tablet: $breakpoint-tablet;
 // }
+
+// // Theme Light
+// [data-theme='light'] {
+//   --color-bg: $color-bg-light;
+//   --color-surface: $color-surface-light;
+//   --color-card: $color-card-light;
+
+//   --color-text-main: $color-text-main-light;
+//   --color-text-secondary: $color-text-secondary-light;
+
+//   --color-icon: $color-icon-light;
+//   --color-element: $color-element-light;
+
+//   --color-accent: $color-accent-light;
+//   --color-success: $color-success;
+//   --color-error: $color-error;
+
+//   --breakpoint-desktop: $breakpoint-desktop;
+//   --breakpoint-tablet: $breakpoint-tablet;
+// }
+
