--- a/src/modules/ProductDetailsPage/MainSlider/MainSlider.module.scss
+++ b/src/modules/ProductDetailsPage/MainSlider/MainSlider.module.scss
@@ -1,8 +1,9 @@
 @import '../../../App.scss';
 
-.mainSlider {
+.wrapper {
   grid-column: 1 / -1;
-  margin-bottom: 40px;
+  width: 100%;
+  height: 100%;
 
   @include on-tablet {
     grid-column: 1 / 8;
@@ -11,4 +12,88 @@
   @include on-desktop {
     grid-column: 1 / 13;
   }
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  @include on-tablet {
+    flex-direction: row;
+    gap: 16px;
+  }
+}
+
+.main {
+  width: 100%;
+  height: auto;
+  max-height: 500px;
+
+  @include on-tablet {
+    flex-grow: 1;
+    flex-shrink: 1;
+    height: 500px;
+  }
+}
+
+.thumbs {
+  order: 1;
+  box-sizing: border-box;
+  width: 100%;
+  height: auto;
+  padding: 16px 0 40px 0;
+
+  @include on-tablet {
+    order: 0;
+    width: 100px;
+    height: 500px;
+    padding: 0;
+  }
+}
+
+.thumbs .swiper-slide {
+  width: 50px !important;
+
+
+  @include on-tablet {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+
+.thumbContainer {
+  cursor: pointer;
+  width: 70px;
+  height: 70px;
+  border: 1px solid $color-element;
+  padding: 5px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: border-color 0.3s ease
+
+}
+
+.thumbs .swiper-slide-thumb-active .swiper-slide {
+  border: 1px solid white !important;
+}
+
+
+.thumbImage {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.mainImage {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
