--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -1,18 +1,77 @@
 @import '../../../../../App.scss';
 
 .defaultButton {
+  position: relative;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background-color: $color-accent;
   border: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:not([disabled]):hover {
     background-color: #a378ff;
   }
+}
 
-  &Selected {
-    background-color: $color-card;
-    cursor: auto;
+.defaultButtonSelected {
+  background-color: $color-card;
+  cursor: auto;
+}
+
+.text {
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  transition:
+    transform 0.4s ease,
+    opacity 0.4s ease;
+  color: $color-text-main;
+}
+
+.linesWrapper {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  pointer-events: none;
+}
+
+.cartIconWrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  flex-direction: row-reverse;
+}
+
+.cartIcon {
+  svg {
+    width: 28px;
+    height: 28px;
+    display: block;
+    order: 2;
   }
+}
+
+.line {
+  height: 10px;
+  width: 30px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 100%
+  );
+  transform-origin: top;
+  flex-shrink: 0;
+}
+
+.line1 {
+  order: 1;
 }
