--- a/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
+++ b/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
@@ -165,3 +165,14 @@
     text-align: right;
   }
 }
+
+.removing {
+  animation: slideOutLeft 0.4s forwards;
+}
+
+@keyframes slideOutLeft {
+  to {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+}
