--- a/src/modules/ProductDetailsPage/MainSlider/MainSlider.module.scss
+++ b/src/modules/ProductDetailsPage/MainSlider/MainSlider.module.scss
@@ -66,10 +66,10 @@
 
 .thumbContainer {
   cursor: pointer;
-  width: 70px;
-  height: 70px;
-  border: 1px solid $color-element;
-  padding: 5px;
+  width: 80px;
+  height: 80px;
+  border: 3px solid $color-element;
+  padding: 7px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -77,8 +77,8 @@
   transition: border-color 0.3s ease;
 }
 
-.thumbs .swiper-slide-thumb-active .swiper-slide {
-  border: 1px solid white !important;
+.thumbs :global(.swiper-slide-thumb-active) .thumbContainer {
+  border: 3px solid white;
 }
 
 .thumbImage {
