--- a/src/modules/HomePage/HomePage.module.scss
+++ b/src/modules/HomePage/HomePage.module.scss
@@ -38,7 +38,7 @@
     font-size: 32px;
     font-weight: 800;
     line-height: 41px;
-    color: $color-text-main;
+    color: var(--color-text-main);
     white-space: normal;
 
     @include on-tablet {
