--- a/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
+++ b/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
@@ -28,7 +28,7 @@
   flex-direction: column;
   text-align: left;
   width: 100%;
-  color: $color-text-main;
+  color: var(--color-text-main);
   cursor: pointer;
   row-gap: 24px;
 
@@ -56,7 +56,7 @@
   }
 
   &Count {
-    color: $color-text-secondary;
+    color: var(--color-text-secondary);
   }
 
   &Phones &ImageWrapper {
