--- a/src/modules/_shared/components/atoms/BackButton/BackButton.module.scss
+++ b/src/modules/_shared/components/atoms/BackButton/BackButton.module.scss
@@ -22,7 +22,7 @@
   }
 
   &:hover {
-    color: $color-accent;
+    color: var(--color-accent);
 
     .backArrow {
       background-image: url(../../../../../assets/icons/icon-arrow-left-purple.svg);
