--- a/src/modules/HomePage/components/Slider/Slider.module.scss
+++ b/src/modules/HomePage/components/Slider/Slider.module.scss
@@ -43,7 +43,7 @@
   width: 14px;
   height: 4px;
   border-radius: 2px;
-  background: $color-element;
+  background: var(--color-element);
   opacity: 0.6;
   margin: 0 5px;
   cursor: pointer;
@@ -53,7 +53,7 @@
 }
 
 .active {
-  background: $color-text-main;
+  background: var(--color-text-main);
   opacity: 1;
 }
 
