--- a/src/modules/NotFoundPage/NotFoundPage.module.scss
+++ b/src/modules/NotFoundPage/NotFoundPage.module.scss
@@ -32,8 +32,8 @@
   width: 250px;
   font-size: 16px;
   font-weight: bold;
-  background-color: $color-accent;
-  color: $color-text-main;
+  background-color: var(--color-accent);
+  color: var(--color-text-main);
   border: none;
 
   @include img-hover-scale;
