--- a/src/modules/ProductDetailsPage/About/About.module.scss
+++ b/src/modules/ProductDetailsPage/About/About.module.scss
@@ -29,7 +29,7 @@
     gap: 16px;
 
     &Text {
-      color: $color-text-secondary;
+      color: var(--color-text-secondary);
       line-height: 21px;
     }
   }
