--- a/src/modules/ProductDetailsPage/TechSpecs/TechSpecs.module.scss
+++ b/src/modules/ProductDetailsPage/TechSpecs/TechSpecs.module.scss
@@ -32,14 +32,14 @@
     &Text {
       display: flex;
       justify-content: space-between;
-      color: $color-text-secondary;
+      color: var(--color-text-secondary);
       font-weight: 600;
       font-size: 14px;
       line-height: 21px;
     }
 
     &Text span {
-      color: $color-text-main;
+      color: var(--color-text-main);
     }
   }
 }
