--- a/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
+++ b/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
@@ -29,16 +29,16 @@
   &Button {
     width: 100%;
     height: 100%;
-    background-color: $color-card;
+    background-color: var(--color-card);
     border: none;
 
     &Disabled {
-      border: 1px solid $color-element;
+      border: 1px solid var(--color-element);
       cursor: auto;
     }
 
     &:not([disabled]):hover {
-      background-color: $color-icon;
+      background-color: var(--color-icon);
     }
   }
 }
