--- a/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
+++ b/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
@@ -3,18 +3,18 @@
 .colorSelector {
   width: 32px;
   height: 32px;
-  border: 2px solid $color-element;
+  border: 2px solid var(--color-element);
   border-radius: 50%;
   padding: 2px;
   cursor: pointer;
   box-sizing: border-box;
 
   &:hover {
-    border-color: $color-text-secondary;
+    border-color: var(--color-text-secondary);
   }
 
   &:disabled {
-    border-color: $color-text-main;
+    border-color: var(--color-text-main);
     cursor: default;
   }
 
