--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background-color: $color-accent;
+  background-color: var(--color-accent);
   border: none;
   cursor: pointer;
   display: flex;
@@ -13,12 +13,12 @@
   justify-content: center;
 
   &:not([disabled]):hover {
-    background-color: #a378ff;
+    opacity: 0.7;
   }
 }
 
 .defaultButtonSelected {
-  background-color: $color-card;
+  background-color: var(--color-card);
   cursor: auto;
 }
 
@@ -29,5 +29,5 @@
   transition:
     transform 0.4s ease,
     opacity 0.4s ease;
-  color: $color-text-main;
+  color: var(--color-text-buttons);
 }
