--- a/src/modules/_shared/components/atoms/Dropdown/Dropdown.module.scss
+++ b/src/modules/_shared/components/atoms/Dropdown/Dropdown.module.scss
@@ -7,17 +7,17 @@
   width: 100%;
   height: 40px;
   padding: 12px;
-  background-color: $color-card;
-  border: 1px solid $color-card;
+  background-color: var(--color-card);
+  border: 1px solid var(--color-card);
   cursor: pointer;
 
   &:hover {
-    border-color: $color-icon;
+    border-color: var(--color-icon);
   }
 
   &:focus,
   &[data-state='open'] {
-    border-color: $color-accent;
+    border-color: var(--color-accent);
     outline: none;
   }
 }
@@ -34,8 +34,8 @@
 
 .selectContent {
   margin-top: 4px;
-  background-color: $color-bg;
-  border: 1px solid $color-element;
+  background-color: var(--color-bg);
+  border: 1px solid var(--color-element);
   width: var(--radix-select-trigger-width);
 }
 
@@ -43,7 +43,7 @@
   position: relative;
   padding: 10px 16px;
   box-sizing: border-box;
-  color: $color-text-secondary;
+  color: var(--color-text-secondary);
   cursor: pointer;
   user-select: none;
   width: 100%;
@@ -53,7 +53,11 @@
 
   &:hover,
   &[data-highlighted] {
-    background-color: $color-card;
-    color: $color-text-main;
+    background-color: var(--color-card);
+    color: var(--color-text-main);
   }
+}
+
+svg {
+  width: 15px;
 }
