--- a/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
+++ b/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
@@ -7,17 +7,17 @@
 
   width: 100%;
   height: 100%;
-  background-color: $color-card;
+  background-color: var(--color-card);
   border: none;
   cursor: pointer;
 
   &:hover {
-    background-color: $color-icon;
+    background-color: var(--color-icon);
   }
 
   &Selected {
     background-image: url(../../../../../assets/icons/icon-favorite-heart-filled.svg);
-    background-color: $color-bg;
-    border: 1px solid $color-element;
+    background-color: var(--color-bg);
+    border: 1px solid var(--color-element);
   }
 }
