--- a/src/modules/_shared/components/atoms/Icons/IconWithCounter/IconWithCounter.module.scss
+++ b/src/modules/_shared/components/atoms/Icons/IconWithCounter/IconWithCounter.module.scss
@@ -18,8 +18,8 @@
   right: -6px;
   width: 11px;
   height: 11px;
-  background-color: $color-error;
-  color: $color-text-main;
+  background-color: var(--color-error);
+  color: var(--color-text-main);
   font-size: 8px;
   line-height: 100%;
   letter-spacing: 0;
@@ -28,5 +28,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid $color-bg;
+  border: 1px solid var(--color-bg);
 }
