--- a/src/modules/_shared/components/atoms/MainLoader/MainLoader.module.scss
+++ b/src/modules/_shared/components/atoms/MainLoader/MainLoader.module.scss
@@ -12,7 +12,7 @@
   margin-top: 30px;
   display: inline-block;
   position: relative;
-  background: #fff;
+  background: var(--color-text-main);
   border-radius: 15% 15% 35% 35%;
 }
 .loader::after {
@@ -21,7 +21,7 @@
   position: absolute;
   left: 45px;
   top: 8px;
-  border: 4px solid #fff;
+  border: 4px solid var(--color-text-main);
   width: 16px;
   height: 20px;
   border-radius: 0 4px 4px 0;
@@ -31,7 +31,7 @@
   position: absolute;
   width: 1px;
   height: 10px;
-  color: #fff;
+  color: var(--color-text-main);
   top: -15px;
   left: 11px;
   box-sizing: border-box;
