--- a/src/modules/_shared/components/molecules/Banner/Banner.module.scss
+++ b/src/modules/_shared/components/molecules/Banner/Banner.module.scss
@@ -140,8 +140,8 @@
     background-color: inherit;
     border: none;
     border-radius: 50px;
-    border: 1px solid $color-text-secondary;
-    color: $color-text-main;
+    border: 1px solid var(--color-text-secondary);
+    color: var(--color-text-main);
     cursor: pointer;
     transition: background-color 0.3s;
     text-transform: uppercase;
