--- a/src/modules/_shared/components/molecules/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/modules/_shared/components/molecules/Breadcrumbs/Breadcrumbs.module.scss
@@ -11,7 +11,7 @@
   }
 
   &Link {
-    color: $color-text-main;
+    color: var(--color-text-main);
   }
 
   &Separator {
@@ -24,6 +24,6 @@
   }
 
   &Current {
-    color: $color-text-secondary;
+    color: var(--color-text-secondary);
   }
 }
