--- a/src/modules/_shared/components/organisms/Footer/Footer.module.scss
+++ b/src/modules/_shared/components/organisms/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   border-top: 1px solid grey;
-  background-color: $color-bg;
+  background-color: var(--color-bg);
   padding-block: 32px;
   height: 257px;
   box-sizing: border-box;
@@ -56,7 +56,7 @@
     }
 
     &Link {
-      color: $color-text-main;
+      color: var(--color-text-main);
       text-decoration: none;
       list-style: none;
     }
@@ -80,7 +80,7 @@
     }
 
     &Text {
-      color: $color-text-secondary;
+      color: var(--color-text-secondary);
     }
 
     &Button {
