commit before push

--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -155,6 +155,6 @@
 
   &Dark {
     background: url('../../../../../assets/icons/icon-burger-menu.svg')
-    center/16px no-repeat;;
+      center/16px no-repeat;
   }
 }
